# bomberman-rs

./: Cargo.toml  README.md
assets/: display_config.ron  input.ron
assets/prefabs/: bomberman.ron  scene.ron  tile.ron
assets/sprites/: blocks.ron  bomberman.ron  logo.ron
assets/sprites/xcf/: blocks.xcf
src/: main.rs  render.rs
src/components/: block.rs  bomberman.rs  mod.rs
src/states/: gameplay.rs  loading.rs  mod.rs  pause.rs
src/systems/: bomberman.rs
