[package]
name = "bomberman"
version = "0.1.0"
authors = ["TatriX <tatrics@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.11.0"
log = { version = "0.4.6", features = ["serde"] }
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
